0.9-3
======================

* Uploaded on R-Forge 2012 - 03 - 28

* Included default value for gpData$covar$family to
  avoid an error when running write.plink without
  family information, replaced error by a warning
  
* Included addtional 'print.report' argument for 
  function codeGeno to generate (optionally) a report 
  to decode original coding scheme, and count number 
  of missing values per SNP

* bug fix in codeGeno using family imputing, polymorphic
  families were identified partly incorrect      
      
  
  
0.9-2
======================   
 
* Uploaded on CRAN 2012 - 03 - 22

* updated vignette, replace LDmaize.pdf by LDmaize.png

* proof-reading of the manual

* minor updates in the demos
  
  